<resources>
    <string name="app_name">EA Application</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="let_me_in">Let me In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="recover">Recover</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="textview">TextView</string>
</resources>