<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="125dp"
        android:layout_height="92dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainlogo"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/forgot_password"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUp"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singInButton"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/email"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#1E1C1C"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#2196F3"
        android:textColorHint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        android:autofillHints="" />
    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_up"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singInButton"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#1E1C1C"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#2196F3"
        android:textColorHint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />
    <Button
        android:id="@+id/singInButton"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2196F3"
        android:text="@string/let_me_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
        android:id="@+id/loginText"
        android:layout_width="104dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>